--- a/3.Organigrammes/300150396 .md
+++ b/3.Organigrammes/300150396 .md
@@ -1,4 +1,4 @@
-# 🧮 Organigramme : Vérifier si un nombre est pair ou impair
+# Organigramme : Vérifier si un nombre est pair ou impair
 
 ```mermaid
 flowchart TD
