--- a/5.Jupyter/300098957/RAPPORT.ipynb
+++ b/5.Jupyter/300098957/RAPPORT.ipynb
@@ -41,6 +41,32 @@
     "\n",
     "So, **1 coulomb ≈ 6.242 × 10¹⁸ electrons**.\n",
     "\n",
+    "In scientific notation,\n",
+    "$10^{18}$\n",
+    "\n",
+    "means **1 followed by 18 zeros** — that is:\n",
+    "\n",
+    "$10^{18} = 1{,}000{,}000{,}000{,}000{,}000 = 1\\ \\text{quintillion}.$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "In **Python**, you can compute it as:\n",
+    "\n",
+    "```python\n",
+    "10**18\n",
+    "```\n",
+    "\n",
+    "✅ Output:\n",
+    "\n",
+    "```\n",
+    "1000000000000000000\n",
+    "```\n",
+    "\n",
+    "So when we say that\n",
+    "$ 1\\ \\text{C} \\approx 6.242 \\times 10^{18}\\ e^-$\n",
+    "it means **one coulomb equals about 6,242,000,000,000,000,000 electrons**.\n",
+    "\n",
+    "\n",
     "Would you like me to show how to visualize this (e.g. using matplotlib) as a charge-to-particle ratio?\n"
    ]
   },
@@ -108,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a9cf861f-602c-40c8-b801-41ae32af1c67",
    "metadata": {},
    "outputs": [
