--- a/6.Variables/.lib/RAPPORT.ipynb
+++ b/6.Variables/.lib/RAPPORT.ipynb
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble des couples filtrés : {('C', 2), ('A', 6), ('B', 6), ('C', 4), ('A', 2), ('B', 2), ('C', 6), ('A', 4), ('B', 4)}\n",
+      "Ensemble des couples filtrés : {('B', 6), ('C', 6), ('C', 2), ('A', 6), ('A', 2), ('B', 2), ('C', 4), ('B', 4), ('A', 4)}\n",
       "Moyenne algébrique des x filtrés : 4.0\n"
      ]
     }
