--- a/5.Jupyter/300158052/RAPPORT.ipynb
+++ b/5.Jupyter/300158052/RAPPORT.ipynb
@@ -1,3 +1,37 @@
-x = 4
-y = 6
-print("La somme est :", x + y)
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78063f6b-b0c7-4055-9a31-c04f22801d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "y = 6\n",
+    "print(\"La somme est :\", x + y)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
