--- a/6.Variables/300158486/rapport.ipynb
+++ b/6.Variables/300158486/rapport.ipynb
@@ -1,12 +1,146 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f04438a8-2d02-4e6b-a3b8-6bf74cd47a0f",
+   "metadata": {},
+   "source": [
+    "# RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "Ce notebook présente trois sections :\n",
+    "1. Le module `embellisseur` et la fonction `f`\n",
+    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
+    "3. Les ensembles (`set`) et la compréhension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a11b8f8e-22b4-4d24-8d66-bb0f98d5a861",
+   "metadata": {},
+   "source": [
+    "#### 1️⃣ Import du module `embellisseur`\n",
+    "\n",
+    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
+    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2057daee-f869-4312-b1b7-8aa5f3389484",
+   "id": "18c0ce17-b740-4142-b4bf-99dc947cc305",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from embellisseur import f\n",
+    "\n",
+    "exemples = [\n",
+    "    10,\n",
+    "    2.718,\n",
+    "    \"hello\",\n",
+    "    [7, 8, 9],\n",
+    "    (10, 20, 30),\n",
+    "    {\"x\": 1, \"y\": 2}\n",
+    "]\n",
+    "\n",
+    "for e in exemples:\n",
+    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    resultat = f(e)\n",
+    "    for k, v in resultat.items():\n",
+    "        print(f\"{k:12} -> {v}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9083829e-0333-46a9-9279-bda772364b54",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Moyenne algébrique et géométrique\n",
+    "\n",
+    "Le module `moyenne` contient deux fonctions :\n",
+    "\n",
+    "- `algebrique(L)` : calcule la moyenne arithmétique  \n",
+    "  $\n",
+    "  \\bar{x} = \\frac{\\sum x_i}{n}\n",
+    "  $\n",
+    "- `geometrique(L)` : calcule la moyenne géométrique  \n",
+    "  $\n",
+    "  G = \\sqrt[n]{\\prod x_i}\n",
+    "  $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28702a2b-e0ad-4299-94cd-0c490d438769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from moyenne import algebrique, geometrique\n",
+    "\n",
+    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))\n",
+    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3722e63f-33dd-488f-8de1-1e513d75ea11",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Ensembles (set) et compréhension\n",
+    "\n",
+    "${\\displaystyle \\{(k,x)\\ \\|\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}$\n",
+    "\n",
+    "On construit un ensemble `S` de couples `(k, x)` où :\n",
+    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
+    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
+    "- et `x` satisfait une condition `P(x)` (ici, être pair).\n",
+    "\n",
+    "Cela illustre :\n",
+    "- les **comprehensions** (`{... for ... if ...}`)\n",
+    "- l'utilisation des **ensembles (`set`)**\n",
+    "- la **réutilisation de fonction** (`algebrique`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70abcdf8-4552-44b5-bdb8-1343997a7e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = ['A', 'B', 'C']\n",
+    "X = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "def P(x):\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "S = {(k, x) for k in K for x in X if P(x)}\n",
+    "print(\"Ensemble des couples filtrés :\", S)\n",
+    "\n",
+    "x_values = [x for (_, x) in S]\n",
+    "if x_values:\n",
+    "    moyenne = algebrique(x_values)\n",
+    "else:\n",
+    "    moyenne = 0\n",
+    "\n",
+    "print(\"Moyenne algébrique des x filtrés :\", moyenne)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba820f45-bff7-4c12-a47a-48879729d3f4",
+   "metadata": {},
+   "source": [
+    "## 🧠 Conclusion\n",
+    "\n",
+    "Ce rapport montre comment :\n",
+    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
+    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
+    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
+    "\n",
+    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
+    "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
+   ]
   }
  ],
  "metadata": {
