--- a/6.Variables/.scripts/.prep/RAPPORT.ipynb
+++ b/6.Variables/.scripts/.prep/RAPPORT.ipynb
@@ -2,209 +2,318 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5815a7ff-159b-461e-95b7-5890032de87f",
+   "id": "62ffb924",
    "metadata": {},
    "source": [
-    "# 🧩 RAPPORT — Fonction f(x) avec @singledispatch\n",
-    "\n",
-    "## Objectif\n",
-    "Démontrer une fonction unique `f(x)` qui adapte son comportement selon le type\n",
-    "(int, float, str, list, tuple, dict) en utilisant le décorateur `@singledispatch`.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1️⃣ Import du module\n",
-    "\n"
+    "# 🐍 Variables en Python\n",
+    "Ce notebook démontre les différents **types de variables** en Python :\n",
+    "- `0b` (binaire)\n",
+    "- `0x` (hexadécimal)\n",
+    "- `int` (entier)\n",
+    "- `float` (nombre décimal)\n",
+    "- `str` (chaîne de caractères)\n",
+    "- `list` (liste)\n",
+    "- `tuple` (tuple)\n",
+    "- `array` (tableau du module `array`)\n",
+    "- `dict` (dictionnaire)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10f6d280",
+   "metadata": {},
+   "source": [
+    "## ⚙️ 1. Valeur binaire (`bin`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "194e43f1-fa49-403f-ad36-97d202155b30",
+   "id": "d2a22190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valeur binaire : 42 | Type : <class 'int'>\n",
+      "En binaire : 0b101010\n"
+     ]
+    }
+   ],
    "source": [
-    "from embellisseur import f"
+    "binaire = 0b101010\n",
+    "print(\"Valeur binaire :\", binaire, \"| Type :\", type(binaire))\n",
+    "print(\"En binaire :\", bin(binaire))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee88afb",
+   "metadata": {},
+   "source": [
+    "## 🔢 2. Valeur hexadécimale (`hex`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfcb3f1f-66b4-4bd0-b786-37a03312c824",
+   "id": "c7900541",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- f(10) ---\n",
-      "binaire      -> 0b1010\n",
-      "hexadécimal  -> 0xa\n",
-      "int          -> 10\n",
-      "float        -> 10.0\n",
-      "str          -> 10\n",
-      "\n",
-      "--- f(2.718) ---\n",
-      "float        -> 2.718\n",
-      "int          -> 2\n",
-      "str          -> 2.718\n",
-      "\n",
-      "--- f(hello) ---\n",
-      "str          -> hello\n",
-      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
-      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
-      "\n",
-      "--- f([7, 8, 9]) ---\n",
-      "list         -> [7, 8, 9]\n",
-      "tuple        -> (7, 8, 9)\n",
-      "array        -> array('i', [7, 8, 9])\n",
-      "str          -> [7, 8, 9]\n",
-      "\n",
-      "--- f((10, 20, 30)) ---\n",
-      "tuple        -> (10, 20, 30)\n",
-      "list         -> [10, 20, 30]\n",
-      "array        -> array('i', [10, 20, 30])\n",
-      "str          -> (10, 20, 30)\n",
-      "\n",
-      "--- f({'x': 1, 'y': 2}) ---\n",
-      "dict         -> {'x': 1, 'y': 2}\n",
-      "list_clés    -> ['x', 'y']\n",
-      "list_valeurs -> [1, 2]\n",
-      "str          -> {'x': 1, 'y': 2}\n"
+      "Valeur hexadécimale : 6719 | Type : <class 'int'>\n",
+      "En hexadécimal : 0x1a3f\n"
      ]
     }
    ],
    "source": [
-    "exemples = [\n",
-    "    10,\n",
-    "    2.718,\n",
-    "    \"hello\",\n",
-    "    [7, 8, 9],\n",
-    "    (10, 20, 30),\n",
-    "    {\"x\": 1, \"y\": 2}\n",
-    "]\n",
-    "\n",
-    "for e in exemples:\n",
-    "    print(f\"\\n--- f({e}) ---\")\n",
-    "    resultat = f(e)\n",
-    "    for k, v in resultat.items():\n",
-    "        print(f\"{k:12} -> {v}\")\n",
-    "\n"
+    "hexadecimale = 0x1A3F\n",
+    "print(\"Valeur hexadécimale :\", hexadecimale, \"| Type :\", type(hexadecimale))\n",
+    "print(\"En hexadécimal :\", hex(hexadecimale))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9da3a5e",
+   "metadata": {},
+   "source": [
+    "## 🔢 3. Variable entière (`int`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12f545bf-37d7-4fc4-80de-d1ff10c50735",
+   "id": "ce9710ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Âge : 25 | Type : <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
-    "from moyenne import algebrique, geometrique"
+    "age = 25\n",
+    "print(\"Âge :\", age, \"| Type :\", type(age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db999a5",
+   "metadata": {},
+   "source": [
+    "## 💧 4. Nombre décimal (`float`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "283d081f-3538-4ff5-8e51-b1392eae57ca",
+   "id": "fc77c5ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La moyenne algébrique est : 6.1\n"
+      "Température : 36.6 | Type : <class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "# Exemple d'utilisation\n",
-    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))"
+    "temperature = 36.6\n",
+    "print(\"Température :\", temperature, \"| Type :\", type(temperature))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c507ec9",
+   "metadata": {},
+   "source": [
+    "## 📝 5. Chaîne de caractères (`str`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "496632f7-a6de-4fa6-8a5f-4887281b3d56",
+   "id": "2ebb1496",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La moyenne géométrique est : 5.3345372167932\n"
+      "Nom : Valiha | Type : <class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "# Exemple d'utilisation\n",
-    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))"
+    "nom = \"Valiha\"\n",
+    "print(\"Nom :\", nom, \"| Type :\", type(nom))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e30fbbd-da77-49b1-ac34-9322f5f5449d",
+   "id": "cb71f085",
    "metadata": {},
    "source": [
-    "|  | 2 Variables |\n",
-    "|--------------------------------------|----------------------------------------------------------------|\n",
-    "| Ensemble (set) | ${\\displaystyle \\{(k,x)\\ |\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}$ [^1] |\n",
-    "\n",
-    "[^1]: https://en.wikipedia.org/wiki/Set-builder_notation"
+    "## 📜 6. Liste (`list`) – modifiable"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5cc80eb9-7715-47b6-9399-7f7c1e66304c",
+   "id": "bfe0009d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble des couples filtrés : {('B', 6), ('C', 6), ('C', 2), ('A', 6), ('A', 2), ('B', 2), ('C', 4), ('B', 4), ('A', 4)}\n",
-      "Moyenne algébrique des x filtrés : 4.0\n"
+      "Liste de fruits : ['pomme', 'banane', 'cerise'] | Type : <class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "# Listes de départ\n",
-    "K = ['A', 'B', 'C']\n",
-    "X = [1, 2, 3, 4, 5, 6]\n",
-    "\n",
-    "# Condition : garder uniquement les nombres pairs\n",
-    "def P(x):\n",
-    "    return x % 2 == 0\n",
-    "\n",
-    "# Générer un set de couples (k, x) où x satisfait P(x)\n",
-    "S = {(k, x) for k in K for x in X if P(x)}\n",
-    "print(\"Ensemble des couples filtrés :\", S)\n",
-    "\n",
-    "# Calculer la moyenne algébrique des valeurs x filtrées\n",
-    "x_values = [x for (_, x) in S]  # extraire les valeurs x du set\n",
-    "if x_values:\n",
-    "    moyenne = algebrique(x_values)\n",
-    "else:\n",
-    "    moyenne = 0\n",
-    "\n",
-    "print(\"Moyenne algébrique des x filtrés :\", moyenne)\n"
+    "fruits = [\"pomme\", \"banane\", \"cerise\"]\n",
+    "print(\"Liste de fruits :\", fruits, \"| Type :\", type(fruits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2310aa3",
+   "metadata": {},
+   "source": [
+    "## 📦 7. Tuple (`tuple`) – non modifiable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf2e943c-9c3e-4cf1-b180-0c22d37f66c0",
+   "execution_count": 7,
+   "id": "76a05586",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordonnées : (45.5, -73.6) | Type : <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "coordonnees = (45.5, -73.6)\n",
+    "print(\"Coordonnées :\", coordonnees, \"| Type :\", type(coordonnees))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ba85a7f",
+   "metadata": {},
+   "source": [
+    "## 🧮 8. Tableau (`array`) du module `array`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "63805d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tableau : array('i', [1, 2, 3, 4, 5]) | Type : <class 'array.array'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from array import array\n",
+    "nombres = array('i', [1, 2, 3, 4, 5])\n",
+    "print(\"Tableau :\", nombres, \"| Type :\", type(nombres))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdc06874",
+   "metadata": {},
+   "source": [
+    "## 🗂️ 9. Dictionnaire (`dict`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0ef4cf74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionnaire étudiant : {'nom': 'Brice', 'programme': 'INF1042', 'note': 95} | Type : <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "etudiant = {\n",
+    "    'nom': 'Brice',\n",
+    "    'programme': 'INF1042',\n",
+    "    'note': 95\n",
+    "}\n",
+    "print(\"Dictionnaire étudiant :\", etudiant, \"| Type :\", type(etudiant))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3463c314",
+   "metadata": {},
+   "source": [
+    "## ✅ Résumé des types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "93aa307f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- RÉSUMÉ ---\n",
+      "42 → int\n",
+      "6719 → int\n",
+      "25 → int\n",
+      "36.6 → float\n",
+      "Valiha → str\n",
+      "['pomme', 'banane', 'cerise'] → list\n",
+      "(45.5, -73.6) → tuple\n",
+      "array('i', [1, 2, 3, 4, 5]) → array\n",
+      "{'nom': 'Brice', 'programme': 'INF1042', 'note': 95} → dict\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n--- RÉSUMÉ ---\")\n",
+    "for var in [binaire, hexadecimale, age, temperature, nom, fruits, coordonnees, nombres, etudiant]:\n",
+    "    print(f\"{var} → {type(var).__name__}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (INF1042-203-25A-04)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "inf1042-203-25a-04"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -216,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
