--- a/7.Algorithmes/prep/RAPPORT.ipynb
+++ b/7.Algorithmes/prep/RAPPORT.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "28331b01-d558-4c6d-a29b-b9f3dd9e39ae",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "120"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,8 +108,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "014a9fc9-87ec-4c56-bf90-d0e621f0f858",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def somme_while(n):\n",
+    "    i = 1\n",
+    "    s = 0\n",
+    "    while i <= n:\n",
+    "        s += i\n",
+    "        i += 1\n",
+    "    return s\n",
+    "\n",
+    "somme_while(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7a891f73-5035-44b7-a9bc-0aee3966eeba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def somme_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    return n + somme_recursive(n - 1)\n",
+    "\n",
+    "somme_recursive(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "105cf511-efc5-4232-bdf3-7651ad77bd14",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Suite de Fibonacci\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "F(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   1, & \\text{si } n = 1 \\\\\n",
+    "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
+    "\\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5c3fe06e-68c7-4119-9aeb-d6b211082590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_iter(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        a, b = b, a + b\n",
+    "    return a\n",
+    "\n",
+    "fib_iter(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cf50fb7a-cd96-4e21-a4e8-7f117aed2f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_rec(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib_rec(n - 1) + fib_rec(n - 2)\n",
+    "\n",
+    "fib_rec(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8643c05d-9ebf-4836-8105-b0479a9e607d",
+   "metadata": {},
+   "source": [
+    "## 📘 4️⃣ Synthèse comparative\n",
+    "\n",
+    "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
+    "|-------------|----------------------|-------|-------------|------------------------|\n",
+    "| Factorielle | \\\\( n! = n \\\\times (n-1)! \\\\) | \\\\( 0! = 1 \\\\) | Simple | O(n) |\n",
+    "| Somme | \\\\( S(n) = n + S(n-1) \\\\) | \\\\( S(0) = 0 \\\\) | Simple | O(n) |\n",
+    "| Fibonacci | \\\\( F(n) = F(n-1) + F(n-2) \\\\) | \\\\( F(0)=0, F(1)=1 \\\\) | Double | O(2^n) (récursif) / O(n) (itératif) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 Conclusion\n",
+    "\n",
+    "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
+    "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
+    "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "958440ce-7008-4ead-8ecf-0ccdef96b7ad",
    "metadata": {},
    "outputs": [],
    "source": []
