--- a/7.Algorithmes/.scripts/.prep/RAPPORT.ipynb
+++ b/7.Algorithmes/.scripts/.prep/RAPPORT.ipynb
@@ -2,311 +2,265 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62ffb924",
+   "id": "953c75f7-dab2-4148-99bd-b4c57aedaaf1",
    "metadata": {},
    "source": [
-    "# 🐍 Variables en Python\n",
-    "Ce notebook démontre les différents **types de variables** en Python :\n",
-    "- `0b` (binaire)\n",
-    "- `0x` (hexadécimal)\n",
-    "- `int` (entier)\n",
-    "- `float` (nombre décimal)\n",
-    "- `str` (chaîne de caractères)\n",
-    "- `list` (liste)\n",
-    "- `tuple` (tuple)\n",
-    "- `array` (tableau du module `array`)\n",
-    "- `dict` (dictionnaire)\n"
+    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10f6d280",
+   "id": "842023ff-cb14-4fde-821e-4859b0327c98",
    "metadata": {},
    "source": [
-    "## ⚙️ 1. Valeur binaire (`bin`)"
+    "## 1️⃣ Factorielle\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "n! = \\begin{cases}\n",
+    "   1, & \\text{si } n = 0 \\\\\n",
+    "   n \\times (n - 1)!, & \\text{si } n > 0\n",
+    "\\end{cases}\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2a22190",
+   "id": "3ad17376-8438-4e07-8394-6866cbd17af8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valeur binaire : 42 | Type : <class 'int'>\n",
-      "En binaire : 0b101010\n"
-     ]
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "binaire = 0b101010\n",
-    "print(\"Valeur binaire :\", binaire, \"| Type :\", type(binaire))\n",
-    "print(\"En binaire :\", bin(binaire))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ee88afb",
-   "metadata": {},
-   "source": [
-    "## 🔢 2. Valeur hexadécimale (`hex`)"
+    "def factorielle_iterative(n):\n",
+    "    resultat = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        resultat *= i\n",
+    "    return resultat\n",
+    "\n",
+    "# Exemple\n",
+    "factorielle_iterative(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7900541",
+   "id": "ea9656bc-caee-41fa-a6f5-87e380409d01",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valeur hexadécimale : 6719 | Type : <class 'int'>\n",
-      "En hexadécimal : 0x1a3f\n"
-     ]
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "hexadecimale = 0x1A3F\n",
-    "print(\"Valeur hexadécimale :\", hexadecimale, \"| Type :\", type(hexadecimale))\n",
-    "print(\"En hexadécimal :\", hex(hexadecimale))"
+    "def factorielle_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorielle_recursive(n - 1)\n",
+    "\n",
+    "# Exemple\n",
+    "factorielle_recursive(5)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9da3a5e",
+   "id": "a2b85e63-3193-47b1-9083-e9998289eec7",
    "metadata": {},
    "source": [
-    "## 🔢 3. Variable entière (`int`)"
+    "## 2️⃣ Somme des n premiers entiers\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
+    "$\n",
+    "\n",
+    "### 🔹 Forme récursive\n",
+    "\n",
+    "$\n",
+    "S(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   n + S(n - 1), & \\text{si } n > 0\n",
+    "\\end{cases}\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce9710ef",
+   "id": "20ff2ba1-aa2c-4b45-9259-0cd539ca0635",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Âge : 25 | Type : <class 'int'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "age = 25\n",
-    "print(\"Âge :\", age, \"| Type :\", type(age))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1db999a5",
-   "metadata": {},
-   "source": [
-    "## 💧 4. Nombre décimal (`float`)"
+    "def somme_while(n):\n",
+    "    i = 1\n",
+    "    s = 0\n",
+    "    while i <= n:\n",
+    "        s += i\n",
+    "        i += 1\n",
+    "    return s\n",
+    "\n",
+    "somme_while(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc77c5ed",
+   "id": "c5764289-3641-4856-8ba6-70619e917e73",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Température : 36.6 | Type : <class 'float'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "temperature = 36.6\n",
-    "print(\"Température :\", temperature, \"| Type :\", type(temperature))"
+    "def somme_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    return n + somme_recursive(n - 1)\n",
+    "\n",
+    "somme_recursive(5)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c507ec9",
+   "id": "098f8825-cb8e-456f-8b11-8a7a2886b500",
    "metadata": {},
    "source": [
-    "## 📝 5. Chaîne de caractères (`str`)"
+    "## 3️⃣ Suite de Fibonacci\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$\n",
+    "F(n) =\n",
+    "\\begin{cases}\n",
+    "   0,1 & \\text{si } n = 0 \\text{ ou } n = 1 \\\\\n",
+    "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
+    "\\end{cases}\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ebb1496",
+   "id": "30a1ee4b-d89a-4952-9d57-de54b6feaf2d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nom : Valiha | Type : <class 'str'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nom = \"Valiha\"\n",
-    "print(\"Nom :\", nom, \"| Type :\", type(nom))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb71f085",
-   "metadata": {},
-   "source": [
-    "## 📜 6. Liste (`list`) – modifiable"
+    "def fib_iter(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        a, b = b, a + b\n",
+    "    return a\n",
+    "\n",
+    "fib_iter(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bfe0009d",
+   "id": "2db1dd10-a49e-46be-8272-900bf04bc511",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Liste de fruits : ['pomme', 'banane', 'cerise'] | Type : <class 'list'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fruits = [\"pomme\", \"banane\", \"cerise\"]\n",
-    "print(\"Liste de fruits :\", fruits, \"| Type :\", type(fruits))"
+    "def fib_rec(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib_rec(n - 1) + fib_rec(n - 2)\n",
+    "\n",
+    "fib_rec(10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2310aa3",
+   "id": "ad337064-052b-460e-b204-b716119a494c",
    "metadata": {},
    "source": [
-    "## 📦 7. Tuple (`tuple`) – non modifiable"
+    "## 📘 4️⃣ Synthèse comparative\n",
+    "\n",
+    "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
+    "|-------------|----------------------|-------|-------------|------------------------|\n",
+    "| Factorielle | \\\\( n! = n \\times (n-1)! \\\\) | \\\\( 0! = 1 \\\\) | Simple | O(n) |\n",
+    "| Somme | \\\\( S(n) = n + S(n-1) \\\\) | \\\\( S(0) = 0 \\\\) | Simple | O(n) |\n",
+    "| Fibonacci | \\\\( F(n) = F(n-1) + F(n-2) \\\\) | \\\\( F(0)=0, F(1)=1 \\\\) | Double | O($2^n$) (récursif) / O(n) (itératif) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 Conclusion\n",
+    "\n",
+    "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
+    "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
+    "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité** des algorithmes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "76a05586",
+   "execution_count": null,
+   "id": "70b043aa-e9da-45e6-a5a8-3b296d2f3ee2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordonnées : (45.5, -73.6) | Type : <class 'tuple'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "coordonnees = (45.5, -73.6)\n",
-    "print(\"Coordonnées :\", coordonnees, \"| Type :\", type(coordonnees))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ba85a7f",
-   "metadata": {},
-   "source": [
-    "## 🧮 8. Tableau (`array`) du module `array`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "63805d24",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tableau : array('i', [1, 2, 3, 4, 5]) | Type : <class 'array.array'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "from array import array\n",
-    "nombres = array('i', [1, 2, 3, 4, 5])\n",
-    "print(\"Tableau :\", nombres, \"| Type :\", type(nombres))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdc06874",
-   "metadata": {},
-   "source": [
-    "## 🗂️ 9. Dictionnaire (`dict`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0ef4cf74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dictionnaire étudiant : {'nom': 'Brice', 'programme': 'INF1042', 'note': 95} | Type : <class 'dict'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "etudiant = {\n",
-    "    'nom': 'Brice',\n",
-    "    'programme': 'INF1042',\n",
-    "    'note': 95\n",
-    "}\n",
-    "print(\"Dictionnaire étudiant :\", etudiant, \"| Type :\", type(etudiant))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3463c314",
-   "metadata": {},
-   "source": [
-    "## ✅ Résumé des types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "93aa307f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- RÉSUMÉ ---\n",
-      "42 → int\n",
-      "6719 → int\n",
-      "25 → int\n",
-      "36.6 → float\n",
-      "Valiha → str\n",
-      "['pomme', 'banane', 'cerise'] → list\n",
-      "(45.5, -73.6) → tuple\n",
-      "array('i', [1, 2, 3, 4, 5]) → array\n",
-      "{'nom': 'Brice', 'programme': 'INF1042', 'note': 95} → dict\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\n--- RÉSUMÉ ---\")\n",
-    "for var in [binaire, hexadecimale, age, temperature, nom, fruits, coordonnees, nombres, etudiant]:\n",
-    "    print(f\"{var} → {type(var).__name__}\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -325,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
