--- a/7.Algorithmes/.scripts/.prep/RAPPORT.ipynb
+++ b/7.Algorithmes/.scripts/.prep/RAPPORT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "953c75f7-dab2-4148-99bd-b4c57aedaaf1",
+   "id": "814bf346-7441-4fa9-a550-3791602beb58",
    "metadata": {},
    "source": [
     "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842023ff-cb14-4fde-821e-4859b0327c98",
+   "id": "e8cac0de-82b3-4663-aaf3-792416d1c4d1",
    "metadata": {},
    "source": [
     "## 1️⃣ Factorielle\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ad17376-8438-4e07-8394-6866cbd17af8",
+   "id": "4455bd0a-af2e-4450-a245-1ba17bcc88a5",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea9656bc-caee-41fa-a6f5-87e380409d01",
+   "id": "1fe2a31a-d976-46dd-a304-cc4aadda0e5f",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b85e63-3193-47b1-9083-e9998289eec7",
+   "id": "71574ab3-f08f-46a3-b23a-9ad3cbaef538",
    "metadata": {},
    "source": [
     "## 2️⃣ Somme des n premiers entiers\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20ff2ba1-aa2c-4b45-9259-0cd539ca0635",
+   "id": "baeb494d-6d80-41aa-9db4-b389e5747ced",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5764289-3641-4856-8ba6-70619e917e73",
+   "id": "a2bd8613-872f-488e-b740-1907edeff646",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098f8825-cb8e-456f-8b11-8a7a2886b500",
+   "id": "5ccbb9d9-ef63-4e60-9a4c-07c9364ac605",
    "metadata": {},
    "source": [
     "## 3️⃣ Suite de Fibonacci\n",
@@ -173,7 +173,8 @@
     "$\n",
     "F(n) =\n",
     "\\begin{cases}\n",
-    "   0,1 & \\text{si } n = 0 \\text{ ou } n = 1 \\\\\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   1, & \\text{si } n = 1 \\\\\n",
     "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
     "\\end{cases}\n",
     "$"
@@ -182,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "30a1ee4b-d89a-4952-9d57-de54b6feaf2d",
+   "id": "02e7267d-3577-44df-91e8-acdea7f7295e",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2db1dd10-a49e-46be-8272-900bf04bc511",
+   "id": "fe5b36df-0c90-4cce-ab92-693a2b629c22",
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +235,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad337064-052b-460e-b204-b716119a494c",
-   "metadata": {},
+   "id": "793dcef1-a477-4930-a560-c17f8fb1fc37",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 📘 4️⃣ Synthèse comparative\n",
     "\n",
@@ -257,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b043aa-e9da-45e6-a5a8-3b296d2f3ee2",
+   "id": "1fef1465-9cfb-4718-8629-27f17447c17e",
    "metadata": {},
    "outputs": [],
    "source": []
