--- a/7.Algorithmes/300159189/RAPPORT.ipynb
+++ b/7.Algorithmes/300159189/RAPPORT.ipynb
@@ -1,1 +1,263 @@
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 🔍 Introduction\n",
+    "\n",
+    "Un **algorithme** peut être implémenté de plusieurs façons. Les deux approches principales sont :\n",
+    "\n",
+    "- **L’itération** : répétition d’instructions via des boucles (`for`, `while`).\n",
+    "- **La récursion** : une fonction qui s’appelle elle-même pour résoudre un sous-problème plus simple.\n",
+    "\n",
+    "Chaque approche influence la **performance**, la **lisibilité** et la **consommation mémoire** du programme."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1️⃣ Factorielle\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$$\n",
+    "n! = \\begin{cases}\n",
+    "   1, & \\text{si } n = 0 \\\\\n",
+    "   n \\times (n - 1)!, & \\text{si } n > 0\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def factorielle_iterative(n):\n",
+    "    resultat = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        resultat *= i\n",
+    "    return resultat\n",
+    "\n",
+    "factorielle_iterative(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def factorielle_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorielle_recursive(n - 1)\n",
+    "\n",
+    "factorielle_recursive(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "def factorielle_comprehension(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return reduce(lambda x, y: x*y, [i for i in range(1, n+1)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2️⃣ Somme des n premiers entiers\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$$\n",
+    "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
+    "$$\n",
+    "\n",
+    "### 🔹 Forme récursive\n",
+    "\n",
+    "$$\n",
+    "S(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   n + S(n - 1), & \\text{si } n > 0\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def somme_while(n):\n",
+    "    i = 1\n",
+    "    s = 0\n",
+    "    while i <= n:\n",
+    "        s += i\n",
+    "        i += 1\n",
+    "    return s\n",
+    "\n",
+    "somme_while(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def somme_recursive(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    return n + somme_recursive(n - 1)\n",
+    "\n",
+    "somme_recursive(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3️⃣ Suite de Fibonacci\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
+    "$$\n",
+    "F(n) =\n",
+    "\\begin{cases}\n",
+    "   0, & \\text{si } n = 0 \\\\\n",
+    "   1, & \\text{si } n = 1 \\\\\n",
+    "   F(n - 1) + F(n - 2), & \\text{si } n \\ge 2\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def fib_iter(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        a, b = b, a + b\n",
+    "    return a\n",
+    "\n",
+    "fib_iter(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def fib_rec(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib_rec(n - 1) + fib_rec(n - 2)\n",
+    "\n",
+    "fib_rec(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 🧪 4️⃣ Analyse des performances\n",
+    "\n",
+    "Pour comparer les approches, on mesure le **temps d’exécution** de chaque version avec le module `time`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "\n",
+    "n = 30\n",
+    "\n",
+    "# Test de la version récursive\n",
+    "start = time.time()\n",
+    "fib_rec(n)\n",
+    "t_rec = time.time() - start\n",
+    "\n",
+    "# Test de la version itérative\n",
+    "start = time.time()\n",
+    "fib_iter(n)\n",
+    "t_iter = time.time() - start\n",
+    "\n",
+    "print(f\"⏱️ Temps récursif : {t_rec:.6f} secondes\")\n",
+    "print(f\"⚙️ Temps itératif : {t_iter:.6f} secondes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 📊 Visualisation graphique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "valeurs = list(range(5, 30, 5))\n",
+    "temps_rec, temps_iter = [], []\n",
+    "\n",
+    "for n in valeurs:\n",
+    "    start = time.time()\n",
+    "    fib_rec(n)\n",
+    "    temps_rec.append(time.time() - start)\n",
+    "\n",
+    "    start = time.time()\n",
+    "    fib_iter(n)\n",
+    "    temps_iter.append(time.time() - start)\n",
+    "\n",
+    "plt.figure(figsize=(7,5))\n",
+    "plt.plot(valeurs, temps_rec, 'r-o', label='Récursif')\n",
+    "plt.plot(valeurs, temps_iter, 'g-o', label='Itératif')\n",
+    "plt.xlabel('n')\n",
+    "plt.ylabel('Temps (secondes)')\n",
+    "plt.title('Comparaison de performance : Fibonacci récursif vs itératif')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 📘 5️⃣ Synthèse comparative\n",
+    "\n",
+    "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
+    "|-------------|----------------------|-------|-------------|------------------------|\n",
+    "| Factorielle | $ n! = n \\times (n-1)! $ | $ 0! = 1 $ | Simple | O(n) |\n",
+    "| Somme | $ S(n) = n + S(n-1) $ | $ S(0) = 0 $ | Simple | O(n) |\n",
+    "| Fibonacci | $ F(n) = F(n-1) + F(n-2) $ | $ F(0)=0, F(1)=1 $ | Double | O($2^n$) (récursif) / O(n) (itératif) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 🧠 Conclusion\n",
+    "\n",
+    "- Les **boucles (`for`, `while`)** offrent une exécution rapide et une faible consommation mémoire.\n",
+    "- La **récursion** traduit élégamment les définitions mathématiques mais devient coûteuse pour de grands `n`.\n",
+    "- La **complexité temporelle** d’un algorithme dépend fortement de la méthode utilisée.\n",
+    "- En pratique, l’**itération** est préférable pour la performance, tandis que la **récursion** est utile pour la clarté algorithmique.\n",
+    "\n",
+    "> ✅ **Conclusion finale :** Les boucles optimisent l’efficacité, la récursion optimise la compréhension."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
 
